# bazel_java_example

./: BUILD.bazel  README.md  WORKSPACE.bazel  checkstyle.bzl  checkstyle.xml
src/main/java/com/example/: EntryPoint.java
